--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "objectarrayindexof",
-  "version": "1.0.5",
-  "description": "indexOf, allIndexsOf, firstIndexOf, lastIndexOf implementations for an object array",
+  "version": "1.0.6",
+  "description": "indexOf, allIndexsOf, firstIndexOf, lastIndexOf, nthIndexOf implementations for an object array",
   "main": "src/index.js",
   "directories": {
     "test": "test"
