--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "objectarrayindexof",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "indexOf, allIndexsOf, firstIndexOf, lastIndexOf, nthIndexOf implementations for an object array",
   "main": "src/index.js",
   "directories": {
@@ -15,11 +15,13 @@
   },
   "keywords": [
     "arrayindexeof",
-    "arrayindexeofObject",
-    "indexOfObject",
+    "arrayindexeofobject",
+    "array-indexeofobject",
+    "object-arrayindexeof",
+    "indexofobject",
     "object",
     "array",
-    "indexOf",
+    "indexof",
     "allIndex",
     "firstIndexOf",
     "lastIndexOf",
